# serializer version: 1
# name: test_switch_entities[switch.eisy_local_movie_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.eisy_local_movie_mode',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Movie Mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:script-text-outline',
    'original_name': 'Movie Mode',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_0001',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.eisy_local_movie_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'actions_enabled': True,
      'actions_last_finish': None,
      'actions_last_run': None,
      'actions_next_scheduled_run': None,
      'friendly_name': 'eisy.local Movie Mode',
      'icon': 'mdi:script-text-outline',
      'run_at_startup': None,
      'running': None,
      'status_enabled': True,
      'status_last_finish': None,
      'status_last_run': None,
      'status_next_scheduled_run': None,
    }),
    'context': <ANY>,
    'entity_id': 'switch.eisy_local_movie_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[switch.fanlinc_lamp_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.fanlinc_lamp_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Enabled',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_EE EE EE 1_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.fanlinc_lamp_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'FanLinc Lamp Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.fanlinc_lamp_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.front_door_lock_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.front_door_lock_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Enabled',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_CC CC CC 1_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.front_door_lock_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Front Door Lock Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.front_door_lock_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.garage_outlet-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.garage_outlet',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_BB BB BB 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.garage_outlet-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Garage Outlet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.garage_outlet',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[switch.garage_outlet_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.garage_outlet_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Enabled',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_BB BB BB 1_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.garage_outlet_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Garage Outlet Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.garage_outlet_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.garage_outlet_living_room_scene-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'group_entities': list([
        'switch.garage_outlet',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.garage_outlet_living_room_scene',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Living Room Scene',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:google-circles-communities',
    'original_name': 'Living Room Scene',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_55090',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.garage_outlet_living_room_scene-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Garage Outlet Living Room Scene',
      'group_all_on': False,
      'group_entities': list([
        'switch.garage_outlet',
      ]),
      'icon': 'mdi:google-circles-communities',
    }),
    'context': <ANY>,
    'entity_id': 'switch.garage_outlet_living_room_scene',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[switch.hallway_light_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hallway_light_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Enabled',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_AA AA AA 1_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hallway_light_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Hallway Light Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hallway_light_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.living_thermostat_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.living_thermostat_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Enabled',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_DD DD DD 1_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.living_thermostat_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Living Thermostat Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.living_thermostat_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.sunset_lights_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.sunset_lights_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Enabled',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:script-text-outline',
    'original_name': 'Enabled',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'program_enable',
    'unique_id': 'aa:bb:cc:dd:ee:ff_0010_enable',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.sunset_lights_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Sunset Lights Enabled',
      'icon': 'mdi:script-text-outline',
    }),
    'context': <ANY>,
    'entity_id': 'switch.sunset_lights_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.sunset_lights_run_at_startup-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.sunset_lights_run_at_startup',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Run at startup',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:restart',
    'original_name': 'Run at startup',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'program_run_at_startup',
    'unique_id': 'aa:bb:cc:dd:ee:ff_0010_run_at_startup',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.sunset_lights_run_at_startup-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Sunset Lights Run at startup',
      'icon': 'mdi:restart',
    }),
    'context': <ANY>,
    'entity_id': 'switch.sunset_lights_run_at_startup',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
